# lango-ai-security

./: .env.example  .env.local.example  .vercelignore  HOW_TO_USE.md  LICENSE  Questions.md  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/benches/: scan_bench.rs
backend/migrations/: 0001_create_users.sql  0002_create_sessions.sql  0003_create_detection_rules.sql  0004_create_audit_log.sql  0005_create_security_events.sql  0006_create_drift_snapshots.sql  0007_add_redacted_low_confidence_review_decision.sql  0008_add_health_module_columns.sql  0009_create_organisations.sql  0010_add_organisation_id.sql  0011_update_user_roles.sql  0012_add_user_consent.sql  0013_create_policy_builder.sql  0014_create_review_decisions.sql  0015_add_response_scan_columns.sql  0016_create_backend_errors.sql  0017_create_chat_and_api_keys.sql
backend/src/: auth.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  models.rs  observability.rs  rate_limit.rs  reports.rs
backend/src/detection/: drift.rs  entity_meta.rs  fallback.rs  health_rules.rs  mod.rs  name_heuristic.rs  plain_language.rs  rules.rs  scan.rs  tokenize.rs
backend/src/providers/: mod.rs  openai.rs
backend/src/routes/: audit_log.rs  auth.rs  backend_errors.rs  chat.rs  command_center.rs  compliance_export.rs  consent.rs  drift.rs  fairness.rs  health.rs  mod.rs  (+8 more)
backend/tests/: chat.rs  chat_multi_tenant_isolation.rs  compliance_export.rs  consent_flow.rs  multi_tenant_isolation.rs  observability.rs  organisation_signup.rs  organization_api_keys.rs  policy_builder.rs  response_scan.rs  review_decisions.rs
(+59 files in other folders)
