[package]
name = "lango-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "lango_backend"
path = "src/lib.rs"

[[bin]]
name = "lango-backend"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "migrate",
    "macros",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
regex = "1"
once_cell = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
csv = "1"
printpdf = "0.7"
tower_governor = "0.4"
governor = "0.6"
# Native chat feature, Phase 1: aes-gcm for organisation API-key
# encryption-at-rest (no reversible-encryption crate existed in this codebase
# before this feature — argon2 above is a one-way password KDF, unsuitable
# for a secret that must later be decrypted to call OpenAI). See crypto.rs
# and Questions.md.
aes-gcm = "0.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "scan_bench"
harness = false
